fixup padding on mobile

--- a/_sass/themes/_blocs-theme.scss
+++ b/_sass/themes/_blocs-theme.scss
@@ -9,7 +9,7 @@
     padding: 0 12rem 3rem 10rem;
   }
   @include breakpoint(medium down) {
-    padding-left: 1rem O;
+    padding: 1rem !important;
   }
 }
 .carte {
